...
        let accuracy = (String(format: "%.2f", statisticService?.totalAccuracy ?? Double.zero))
        let text = "Ваш результат: \(self.correctAnswers)/\(self.numberOfQuestions)\n" +
        "Количество сыгранных квизов: \(statisticService?.gamesCount ?? 0)\n" +
        "Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date.dateTimeString))\n" +
        "Средняя точность: \(accuracy)%"
        
        let result: QuizResultsViewModel = .init(title: "Этот раунд окончен!",
                                                 text: text,
                                                 buttonText: "Сыграть ещё раз")
        
        DispatchQueue.main.async { [weak self] in
            self?.viewController?.show(quiz: result)
        }
...
